# multiagent-convgen

./: .gitignore  DESIGN.md  README.md  pyproject.toml  run_experiment.sh  update_design_results.py
.claude/: settings.local.json
artifacts/: coverage_A.json  coverage_B.json  graph.pkl  registry.pkl  stats.json
data/toolbench/Finance/: api_list.json
data/toolbench/Food/: api_list.json
data/toolbench/Health/: api_list.json
data/toolbench/Maps/: api_list.json
data/toolbench/News/: api_list.json
data/toolbench/Productivity/: api_list.json
data/toolbench/Shopping/: api_list.json
data/toolbench/Sports/: api_list.json
data/toolbench/Travel/: api_list.json
data/toolbench/Weather/: api_list.json
output/: report_A.json  report_A_prev.json  report_B.json  report_B_prev.json  run_A.jsonl  run_B.jsonl  run_B_prev.jsonl  smoke_test.jsonl  smoke_test2.jsonl
scripts/: fetch_toolbench.py
tests/e2e/: conftest.py  test_end_to_end.py
tests/integration/: test_dialogue_controls.py  test_retry_repair.py
tests/unit/: test_executor.py  test_graph.py  test_judge.py  test_registry.py
toolgen/: __init__.py  cli.py  llm_client.py
toolgen/agents/: __init__.py  assistant.py  judge.py  orchestrator.py  planner.py  user.py
toolgen/context/: __init__.py  conversation.py
toolgen/executor/: __init__.py  mock_generator.py  session.py
toolgen/graph/: __init__.py  builder.py  coverage.py  sampler.py
toolgen/output/: __init__.py  schema.py  writer.py
toolgen/registry/: __init__.py  loader.py  models.py
